# ddss

./: .gitignore  .pre-commit-config.yaml  README.md  biome.json  ds.py  egg.py  egraph.py  example_1.sql  example_1.txt  example_2.sql  example_2.txt  example_3.txt  input.py  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml  rollup.config.js  tsconfig.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docs.yml  jest.yml  npm.yml  pytest.yml  wheels.yml
.vitepress/: config.ts
ddss/: chain.py  chain.ts  ds.py  ds.ts  dump.py  dump.ts  egg.py  egg.ts  egraph.py  egraph.ts  input.py  input.ts  load.py  load.ts  main.py  main.ts  orm.py  orm.ts  output.py  output.ts  poly.py  search.py  search.ts  utility.py  utility.ts
docs/: index.md  license.md  usage.md
docs/.vitepress/: config.ts
examples/: arithmetic_example.dsp  geometry_for_wo_tool_complex_1.dsp  geometry_for_wo_tool_complex_10.dsp  geometry_for_wo_tool_complex_2.dsp  geometry_for_wo_tool_complex_3.dsp  geometry_for_wo_tool_complex_4.dsp  geometry_for_wo_tool_complex_5.dsp  geometry_for_wo_tool_complex_6.dsp  geometry_for_wo_tool_complex_7.dsp  geometry_for_wo_tool_complex_8.dsp  geometry_for_wo_tool_complex_9.dsp  main.py  main.ts  relationship.dsp  relationship_quick_start.dsp
tests/: __init__.py  test_chain.py  test_chain.ts  test_ds.py  test_ds.ts  test_dump.py  test_dump.ts  test_egg.py  test_egg.ts  test_input.py  test_input.ts  test_load.py  test_load.ts  test_output.py  test_output.ts  test_search.py  test_search.ts  utils.ts
(+12 files in other folders)
