[project]
name = "ddss"
version = "0.0.7"
description = "Distributed Deductive System Sorts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.2",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.0",
    "apyds>=0.0.7",
    "apyds-bnf>=0.0.7",
    "cloudpickle>=3.1.2",
    "egglog>=12.0.0",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ddss"
module-root = ""

[project.scripts]
ddss = "ddss.main:cli"

[tool.ruff]
line-length = 120
